Use Custom Element

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body>
     <h1>5 years</h1>
     <div class="row">
-        <data-markdown src="test1.md" class="col-md-6"></data-markdown>
-        <data-markdown src="test2.md" class="col-md-6"></data-markdown>
+        <x-markdown2html src="test1.md" class="col-md-6"></x-markdown2html>
+        <x-markdown2html src="test2.md" class="col-md-6"></x-markdown2html>
     </div>
     <div class="row">
-        <data-markdown src="test3.md" class="col-md-6"></data-markdown>
-        <data-markdown src="test4.md" class="col-md-6"></data-markdown>
+        <x-markdown2html src="test3.md" class="col-md-6"></x-markdown2html>
+        <x-markdown2html src="test4.md" class="col-md-6"></x-markdown2html>
     </div>
-    <data-markdown src="test5.md"></data-markdown>
+    <x-markdown2html src="test5.md"></x-markdown2html>
     <footer>&copy; Rich was here</footer>
-    <script type="module" src="https://rhildred.github.io/data-portfolio/index.js"></script>
+    <script src="https://rhildred.github.io/custom-element/custom-element.js"></script>
 </body>
 
 </html>
